# giovanna

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: generator.c  generator.h  main.c
src/compiling/: compiler.c  compiler.h
src/compiling/invalidation/: invalidator.c  invalidator.h
src/compiling/lexing/: tokenizer.c  tokenizer.h
src/compiling/lexing/token/: addition.c  addition.h  numeric.c  numeric.h  subtraction.c  subtraction.h
src/generation/: generator.c  generator.h
src/lexing/: tokenizer.c
src/lexing/generation/: generator.h
src/lexing/token/: addition.c  addition.h  numeric.c  numeric.h  subtraction.c  subtraction.h
